--- a/marshak/2022_05/0_GUNW_ID_to_Input_Scenes.ipynb
+++ b/marshak/2022_05/0_GUNW_ID_to_Input_Scenes.ipynb
@@ -10,12 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "valued-disposition",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-31T23:01:22.595385Z",
-     "start_time": "2022-05-31T23:01:20.907996Z"
+     "end_time": "2023-02-02T17:56:47.436920Z",
+     "start_time": "2023-02-02T17:56:43.053620Z"
     }
    },
    "outputs": [],
@@ -43,12 +43,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "established-summary",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-31T23:01:22.602251Z",
-     "start_time": "2022-05-31T23:01:22.597118Z"
+     "end_time": "2023-02-02T17:56:47.445610Z",
+     "start_time": "2023-02-02T17:56:47.439193Z"
     }
    },
    "outputs": [],
@@ -258,11 +258,168 @@
     "print('Issue 60', gunw_id)\n",
     "get_ref_secondary_scene(gunw_id)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c2a6e21a",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-02-02T17:57:15.147893Z",
+     "start_time": "2023-02-02T17:57:14.613184Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arabia with Ionosphere S1-GUNW-A-R-043-tops-20221002_20220908-151531-00041E_00027N-PP-e567-v2_0_5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'product_id': 'S1-GUNW-A-R-043-tops-20221002_20220908-151531-00041E_00027N-PP-e567-v2_0_5',\n",
+       "  'product_version': 'v2_0_5',\n",
+       "  'reference_scenes': ['S1A_IW_SLC__1SDV_20221002T151520_20221002T151543_045265_056931_E517'],\n",
+       "  'secondary_scenes': ['S1A_IW_SLC__1SDV_20220908T151520_20220908T151542_044915_055D68_78EC']}]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gunw_id = 'S1-GUNW-A-R-043-tops-20221002_20220908-151531-00041E_00027N-PP-e567-v2_0_5'\n",
+    "print('Arabia with Ionosphere', gunw_id)\n",
+    "get_ref_secondary_scene(gunw_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "333e7688",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-02-02T18:07:01.304693Z",
+     "start_time": "2023-02-02T18:07:00.786832Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tibet Issues 0 S1-GUNW-A-R-041-tops-20170817_20160717-120015-390925N_37050N-PP-ed21-v2_0_4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'product_id': 'S1-GUNW-A-R-041-tops-20170817_20160717-120015-390925N_37050N-PP-ed21-v2_0_4',\n",
+       "  'product_version': 'v2_0_4',\n",
+       "  'reference_scenes': ['S1A_IW_SLC__1SDV_20170817T120001_20170817T120028_017963_01E230_A23A-local'],\n",
+       "  'secondary_scenes': ['S1A_IW_SLC__1SSV_20160717T115946_20160717T120014_012188_012E84_F684-local',\n",
+       "   'S1A_IW_SLC__1SSV_20160717T120012_20160717T120039_012188_012E84_4198-local']}]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gunw_id = 'S1-GUNW-A-R-041-tops-20170817_20160717-120015-390925N_37050N-PP-ed21-v2_0_4'\n",
+    "print('Tibet Issues 0', gunw_id)\n",
+    "get_ref_secondary_scene(gunw_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a70e4c2c",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-02-02T18:19:33.439230Z",
+     "start_time": "2023-02-02T18:19:32.492259Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tibet Issues 1 S1-GUNW-A-R-041-tops-20141231_20141207-115927-37270N_35394N-PP-d9a6-v2_0_4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'product_id': 'S1-GUNW-A-R-041-tops-20141231_20141207-115927-37270N_35394N-PP-d9a6-v2_0_4',\n",
+       "  'product_version': 'v2_0_4',\n",
+       "  'reference_scenes': ['S1A_IW_SLC__1SSV_20141231T115913_20141231T115940_003963_004C50_1CEA-local'],\n",
+       "  'secondary_scenes': ['S1A_IW_SLC__1SSV_20141207T115849_20141207T115916_003613_00445F_3EA7-local',\n",
+       "   'S1A_IW_SLC__1SSV_20141207T115914_20141207T115941_003613_00445F_AF5A-local',\n",
+       "   'S1A_IW_SLC__1SSV_20141207T115939_20141207T120007_003613_00445F_BA69-local']}]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gunw_id = 'S1-GUNW-A-R-041-tops-20141231_20141207-115927-37270N_35394N-PP-d9a6-v2_0_4'\n",
+    "print('Tibet Issues 1', gunw_id)\n",
+    "get_ref_secondary_scene(gunw_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "7cf4aa1f",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-02-02T18:19:23.340894Z",
+     "start_time": "2023-02-02T18:19:22.572543Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tibet Issues 0 S1-GUNW-A-R-041-tops-20141231_20141207-115952-38760N_36887N-PP-7560-v2_0_1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'product_id': 'S1-GUNW-A-R-041-tops-20141231_20141207-115952-38760N_36887N-PP-7560-v2_0_1',\n",
+       "  'product_version': 'v2_0_1',\n",
+       "  'reference_scenes': ['S1A_IW_SLC__1SSV_20141231T115938_20141231T120006_003963_004C50_DB7D'],\n",
+       "  'secondary_scenes': ['S1A_IW_SLC__1SSV_20141207T115914_20141207T115941_003613_00445F_AF5A',\n",
+       "   'S1A_IW_SLC__1SSV_20141207T115939_20141207T120007_003613_00445F_BA69',\n",
+       "   'S1A_IW_SLC__1SSV_20141207T120005_20141207T120031_003613_00445F_F430']}]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gunw_id = 'S1-GUNW-A-R-041-tops-20141231_20141207-115952-38760N_36887N-PP-7560-v2_0_1'\n",
+    "print('Tibet Issues OK', gunw_id)\n",
+    "get_ref_secondary_scene(gunw_id)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -276,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
