--- a/marshak/2022_06/Submit Test Job for Raider.ipynb
+++ b/marshak/2022_06/Submit Test Job for Raider.ipynb
@@ -3,11 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e18af7f8",
+   "id": "0dce9a68",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-24T20:13:30.901686Z",
-     "start_time": "2023-01-24T20:13:30.839449Z"
+     "end_time": "2023-01-24T22:09:56.243866Z",
+     "start_time": "2023-01-24T22:09:56.171881Z"
     }
    },
    "outputs": [],
@@ -17,12 +17,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "6e8a1651",
+   "execution_count": 2,
+   "id": "154b11eb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-24T20:14:56.313968Z",
-     "start_time": "2023-01-24T20:14:56.310397Z"
+     "end_time": "2023-01-24T22:09:57.106353Z",
+     "start_time": "2023-01-24T22:09:57.099156Z"
     }
    },
    "outputs": [
@@ -35,7 +35,7 @@
        "  'weather_model': 'HRRR'}]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,12 +52,11 @@
     "                     },\n",
     "                     # Can add more\n",
     "                     # {'granules': \n",
-    "                     #     ['S1B_IW_SLC__1SDV_20200211T135142_20200211T135209_020222_0264A9_1B5A'],\n",
+    "                     #     [''],\n",
     "                     # 'secondary_granules': \n",
-    "                     #     ['S1B_IW_SLC__1SDV_20200130T135143_20200130T135210_020047_025EF5_6165',\n",
-    "                     #      'S1B_IW_SLC__1SDV_20200130T135207_20200130T135234_020047_025EF5_5DF7'],\n",
-    "                     # 'weather_model': 'HRRR'\n",
-    "                     }\n",
+    "                     #     [''],\n",
+    "                     # 'weather_model': ''\n",
+    "                     # }\n",
     "                    ]\n",
     "\n",
     "records_to_submit"
@@ -66,11 +65,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dde3b343",
+   "id": "622a2e2d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-24T20:13:45.067772Z",
-     "start_time": "2023-01-24T20:13:30.913186Z"
+     "end_time": "2023-01-24T22:10:07.776208Z",
+     "start_time": "2023-01-24T22:09:58.554972Z"
     }
    },
    "outputs": [
@@ -92,12 +91,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "a0b35643",
+   "execution_count": 4,
+   "id": "4b59f636",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-24T20:13:59.713113Z",
-     "start_time": "2023-01-24T20:13:59.711149Z"
+     "end_time": "2023-01-24T22:10:07.780218Z",
+     "start_time": "2023-01-24T22:10:07.778216Z"
     }
    },
    "outputs": [],
@@ -108,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6a38c859",
+   "id": "0c8deab0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-24T20:14:52.394632Z",
@@ -145,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60fde707",
+   "id": "62e275a4",
    "metadata": {},
    "source": [
     "Submitting jobs!"
@@ -154,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "801e9262",
+   "id": "75787a29",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-24T20:15:05.856648Z",
@@ -168,12 +167,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "f28df6bc",
+   "execution_count": 5,
+   "id": "ea0739fb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-24T20:15:08.840871Z",
-     "start_time": "2023-01-24T20:15:08.718429Z"
+     "end_time": "2023-01-24T22:10:13.630527Z",
+     "start_time": "2023-01-24T22:10:13.043057Z"
     }
    },
    "outputs": [
@@ -181,7 +180,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 HyP3 Jobs: 0 succeeded, 0 failed, 0 running, 1 pending.\n"
+      "1 HyP3 Jobs: 1 succeeded, 0 failed, 0 running, 0 pending.\n"
      ]
     }
    ],
@@ -192,22 +191,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "1e636922",
+   "execution_count": 6,
+   "id": "ac10805b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-24T20:15:14.000754Z",
-     "start_time": "2023-01-24T20:15:13.997881Z"
+     "end_time": "2023-01-24T22:10:15.646123Z",
+     "start_time": "2023-01-24T22:10:15.642915Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Batch([Job.from_dict({'job_id': '3ee321d9-c9b4-4b25-a085-bdc594cbe3e7', 'job_type': 'INSAR_ISCE_TEST', 'request_time': '2023-01-24T20:15:05+00:00', 'status_code': 'PENDING', 'user_id': 'cmarshak', 'name': 'raider-test-hrrr-corrected', 'job_parameters': {'granules': ['S1B_IW_SLC__1SDV_20200211T135142_20200211T135209_020222_0264A9_1B5A'], 'secondary_granules': ['S1B_IW_SLC__1SDV_20200130T135143_20200130T135210_020047_025EF5_6165', 'S1B_IW_SLC__1SDV_20200130T135207_20200130T135234_020047_025EF5_5DF7'], 'weather_model': 'HRRR'}})])"
+       "Batch([Job.from_dict({'job_id': '3ee321d9-c9b4-4b25-a085-bdc594cbe3e7', 'job_type': 'INSAR_ISCE_TEST', 'request_time': '2023-01-24T20:15:05+00:00', 'status_code': 'SUCCEEDED', 'user_id': 'cmarshak', 'name': 'raider-test-hrrr-corrected', 'job_parameters': {'granules': ['S1B_IW_SLC__1SDV_20200211T135142_20200211T135209_020222_0264A9_1B5A'], 'secondary_granules': ['S1B_IW_SLC__1SDV_20200130T135143_20200130T135210_020047_025EF5_6165', 'S1B_IW_SLC__1SDV_20200130T135207_20200130T135234_020047_025EF5_5DF7'], 'weather_model': 'HRRR'}, 'files': [{'filename': 'S1-GUNW-D-R-071-tops-20200211_20200130-135155-00119W_00033N-PP-2296-v2_0_6.nc', 's3': {'bucket': 'hyp3-a19-jpl-contentbucket-1wfnatpznlg8b', 'key': '3ee321d9-c9b4-4b25-a085-bdc594cbe3e7/S1-GUNW-D-R-071-tops-20200211_20200130-135155-00119W_00033N-PP-2296-v2_0_6.nc'}, 'size': 53557549, 'url': 'https://hyp3-a19-jpl-contentbucket-1wfnatpznlg8b.s3.us-west-2.amazonaws.com/3ee321d9-c9b4-4b25-a085-bdc594cbe3e7/S1-GUNW-D-R-071-tops-20200211_20200130-135155-00119W_00033N-PP-2296-v2_0_6.nc'}], 'logs': [], 'browse_images': ['https://hyp3-a19-jpl-contentbucket-1wfnatpznlg8b.s3.us-west-2.amazonaws.com/3ee321d9-c9b4-4b25-a085-bdc594cbe3e7/S1-GUNW-D-R-071-tops-20200211_20200130-135155-00119W_00033N-PP-2296-v2_0_6.png'], 'thumbnail_images': [], 'expiration_time': '2023-07-24T00:00:00+00:00'})])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "86863f3b",
+   "id": "fc140362",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-06-15T20:38:29.611364Z",
