update nbs with tri-tiles

--- a/marshak/2025_09/check_products/2_Check_layers.ipynb
+++ b/marshak/2025_09/check_products/2_Check_layers.ipynb
@@ -227,7 +227,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
+   "id": "22365981-8d96-444b-a33e-a90754c256dd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "id": "8a65f8a8-2d1d-41d8-976a-655204c52b46",
    "metadata": {},
    "outputs": [
@@ -246,6 +254,7 @@
       "Percent of pixels with deviation larger than 0.0001:  0.9765760161732403\n",
       "Total valid pixels : 51443\n",
       "Mean absolute error (MAE) of bad pixels: 0.0023168539628386497\n",
+      "First, second, third tritiles: -0.0004730224609375, 0.00128936767578125, 0.0024225807189941356\n",
       "The origin of the new dataset is:  -119.024167057 34.889267111\n",
       "The origin of the g(old)en dataset is:  -119.024167057 34.889267111\n",
       "\n",
@@ -259,6 +268,7 @@
       "Percent of pixels with deviation larger than 0.0001:  0.4194832866418546\n",
       "Total valid pixels : 6267382\n",
       "Mean absolute error (MAE) of bad pixels: 0.00023630766372662038\n",
+      "First, second, third tritiles: -0.0001430511474609375, 0.00017452239990234375, 0.0006084442138671875\n",
       "The origin of the new dataset is:  -119.024167057 34.889267111\n",
       "The origin of the g(old)en dataset is:  -119.024167057 34.889267111\n",
       "\n",
@@ -344,6 +354,7 @@
       "Percent of pixels with deviation larger than 0.0001:  0.1937116646153051\n",
       "Total valid pixels : 6267382\n",
       "Mean absolute error (MAE) of bad pixels: 0.0032712973188608885\n",
+      "First, second, third tritiles: -0.0003662109375, 0.000244140625, 0.021484375\n",
       "The origin of the new dataset is:  -119.024167057 34.889267111\n",
       "The origin of the g(old)en dataset is:  -119.024167057 34.889267111\n",
       "\n",
@@ -357,6 +368,7 @@
       "Percent of pixels with deviation larger than 0.0001:  4.202678366923241e-06\n",
       "Total valid pixels : 8565966\n",
       "Mean absolute error (MAE) of bad pixels: 0.0038320894818753004\n",
+      "First, second, third tritiles: -0.002256439626216888, 0.000101432204246521, 0.011116185039281839\n",
       "The origin of the new dataset is:  -119.024167057 34.889267111\n",
       "The origin of the g(old)en dataset is:  -119.024167057 34.889267111\n",
       "\n",
@@ -370,6 +382,7 @@
       "Percent of pixels with deviation larger than 0.0001:  1.7026053706764123e-05\n",
       "Total valid pixels : 5462217\n",
       "Mean absolute error (MAE) of bad pixels: 6.49462366104126\n",
+      "First, second, third tritiles: 8.0, 8.0, 8.0\n",
       "The origin of the new dataset is:  -119.024167057 34.889267111\n",
       "The origin of the g(old)en dataset is:  -119.024167057 34.889267111\n",
       "\n",
@@ -395,6 +408,7 @@
       "Percent of pixels with deviation larger than 0.0001:  0.00012724776166517587\n",
       "Total valid pixels : 8565966\n",
       "Mean absolute error (MAE) of bad pixels: 2.588320732116699\n",
+      "First, second, third tritiles: -0.00016117095947265625, 0.00013780593872070312, 6.2831926345825195\n",
       "The origin of the new dataset is:  -119.024167057 34.889267111\n",
       "The origin of the g(old)en dataset is:  -119.024167057 34.889267111\n",
       "\n",
@@ -512,7 +526,12 @@
     "        print(f'Total valid pixels : {total_mask.sum()}')\n",
     "        if bad_pixels_mask.sum():\n",
     "            print(f'Mean absolute error (MAE) of bad pixels: {np.nanmean(np.abs(X_new_data - X_golden_data)[bad_pixels_mask])}')\n",
-    "\n",
+    "        \n",
+    "            abs_diff_of_bad_pixels = (X_new_data - X_golden_data)[bad_pixels_mask]\n",
+    "            first_third_percentile = np.nanpercentile(abs_diff_of_bad_pixels, 33)\n",
+    "            second_third_percentile = np.nanpercentile(abs_diff_of_bad_pixels, 66)\n",
+    "            last_third_percentile = np.nanpercentile(abs_diff_of_bad_pixels, 99)\n",
+    "            print(f'First, second, third tritiles: {first_third_percentile}, {second_third_percentile}, {last_third_percentile}')\n",
     "        print(f'The origin of the new dataset is: ', trans_new.c, trans_new.f)\n",
     "        print(f'The origin of the g(old)en dataset is: ', trans_golden.c, trans_golden.f)\n",
     "        print('\\n')"
